@@ -54,6 +54,8 @@ COM_PODCASTMANAGER_FEED_FIELD_DESCRIPTION_DESCRIPTION="A short description of th
 COM_PODCASTMANAGER_FEED_FIELD_DESCRIPTION_LABEL="Description"
 COM_PODCASTMANAGER_FEED_FIELD_NAME_DESCRIPTION="The name of the podcast feed."
 COM_PODCASTMANAGER_FEED_FIELD_NAME_LABEL="Feed Name"
+COM_PODCASTMANAGER_FEED_FIELD_NEWFEED_DESCRIPTION="If you have changed the URL of your feed, enter the new URL for the feed in this area."
+COM_PODCASTMANAGER_FEED_FIELD_NEWFEED_LABEL="New Feed URL"
 COM_PODCASTMANAGER_FEED_VIEW_DESCRIPTION="The RSS feed for the podcast stream"
 COM_PODCASTMANAGER_FEED_VIEW_TITLE="Feed"
 COM_PODCASTMANAGER_FIELD_CREATED_DESCRIPTION="Date the podcast was created."
