@@ -13,6 +13,8 @@ COM_PODCASTMANAGER_FEED_FIELD_ITIMAGE_DESCRIPTION="Image to use for iTunes feed.
 COM_PODCASTMANAGER_FEED_FIELD_ITIMAGE_LABEL="Image"
 COM_PODCASTMANAGER_FEED_FIELD_NAME_DESCRIPTION="The name of the podcast feed."
 COM_PODCASTMANAGER_FEED_FIELD_NAME_LABEL="Feed Name"
+COM_PODCASTMANAGER_FEED_FIELD_NEWFEED_DESCRIPTION="If you have changed the URL of your feed, enter the new URL for the feed in this area."
+COM_PODCASTMANAGER_FEED_FIELD_NEWFEED_LABEL="New Feed URL"
 COM_PODCASTMANAGER_FIELD_CREATED_DESCRIPTION="Date the podcast was created."
 COM_PODCASTMANAGER_FIELD_CREATED_LABEL="Created Date"
 COM_PODCASTMANAGER_FIELD_FEEDNAME_DESCRIPTION="The feed that this episode is a part of."
